--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "vue-i18n": "^8.7.0"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0"
   }
 }
