--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
     "@nuxtjs/axios": "^5.0.0",
+    "cross-env": "^5.2.0",
     "koa": "^2.5.2",
+    "markdown-it": "^8.4.2",
+    "markdown-it-highlightjs": "^3.0.0",
+    "markdown-it-kbd": "^2.0.0",
+    "markdown-it-mark": "^2.0.0",
+    "markdown-it-toc-and-anchor": "^4.2.0",
     "nuxt": "^2.0.0",
     "vee-validate": "^2.1.6",
     "vue-i18n": "^8.7.0"
