--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "markdown-it-toc-and-anchor": "^4.2.0",
     "nuxt": "^2.0.0",
     "vee-validate": "^2.1.6",
-    "vue-i18n": "^8.7.0"
+    "vue-i18n": "^8.7.0",
+    "vue-photo-preview-op": "0.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
