--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "awei <274635143@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development HOST=0.0.0.0 PORT=3003 nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development PORT=3003 nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env PORT=3003 nuxt start",
     "pm2": "pm2 start npm --name blog-client -- start",
