--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development PORT=3003 nodemon server/index.js --watch server",
-    "build": "nuxt build",
+    "build": "node ./script/build.js",
+    "nuxt:build": "cross-env nuxt build",
+    "publish": "node ./script/upload.js",
     "start": "cross-env PORT=3003 nuxt start",
     "pm2": "pm2 start npm --name blog-client -- start",
     "restart": "pm2 restart blog-client",
@@ -24,6 +26,8 @@
     "markdown-it-mark": "^2.0.0",
     "markdown-it-toc-and-anchor": "^4.2.0",
     "nuxt": "^2.0.0",
+    "request": "^2.88.2",
+    "shelljs": "^0.8.5",
     "vee-validate": "^2.1.6",
     "vue-i18n": "^8.15.3",
     "vue-photo-preview-op": "0.0.2"
